--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,4 +50,4 @@ jobs:
       env:
         MIX_ENV: test
     - name: Run tests
-      run: mix test
+      run: mix test test/chunkr/chunkr_test.exs:45
